<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:textColor="#2b3d4d"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="@string/product_name"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        tools:text="@string/price"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        tools:text="@string/quantity" />

    <Button
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="@color/colorAccent"
        android:text="@string/sale" />

</LinearLayout>